fix(junior): realign QCM image hint to the left

--- a/junior/app/styles/app.scss
+++ b/junior/app/styles/app.scss
@@ -43,7 +43,6 @@ body {
   color: var(--pix-neutral-900);
   font-weight: 600;
   font-family: $font-nunito;
-  text-align: center;
   background: rgb(236 242 251 / 20%);
 }
 
