--- a/junior/app/styles/pages/school.scss
+++ b/junior/app/styles/pages/school.scss
@@ -40,6 +40,7 @@
     height: 190px;
     margin: 12px;
     color: var(--pix-neutral-900);
+    text-align: center;
     background-color: var(--pix-neutral-0);
     background-image: url('/images/division.svg');
     background-repeat: no-repeat;
